[package]
name = "arkworks-threshold-decryption"
version = "0.0.1"
authors = ["ValarDragon <dev@sikka.tech>", "Georgios Gkitsas <ggkitsas@yahoo.com>"]
edition = "2018"


[dependencies]
num = "0.4.0"
log = "0.4.6"
thiserror = "1.0.14"
hex = "0.4.3"

ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-poly = "0.2.0"
ark-serialize = "0.2.0"
ark-std = "0.2.0"
ark-bls12-381 = "0.2.0"

bls-crypto = { git = "https://github.com/sikkatech/celo-bls-snark-rs", branch="make_hashes_have_new_fn", default-features = false }

chacha20 = { version = "0.6.0" }
rand_core = { version = "0.5" }
rand = "0.7.3"

algebra = { git = "https://github.com/celo-org/zexe", features = ["derive", "bls12_377", "ed_on_bw6_761", "parallel"] }

miracl_core = "2.3.0"

sha256 = "1.0.0"