[package]
name = "tpke"
version = "0.0.1"
authors = ["Heliax AG <hello@heliax.dev>", "ValarDragon <dev@sikka.tech>", "Georgios Gkitsas <georgios@heliax.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pairing-based threshold decryption"
repository = "https://github.com/heliaxdev/arkworks-threshold-decryption/"
readme = "README.md"

[dependencies]
num = "0.4.0"
log = "0.4.6"
thiserror = "1.0.14"
hex = "0.4.3"
zeroize = "1.3.0"
rand_core = { version = "0.5" }
rand = "0.7.3"
chacha20 = { version = "0.6.0" }
blake2 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11" }

ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-poly = "0.2.0"
ark-serialize = "0.2.0"
ark-std = "0.2.0"
ark-bls12-381 = "0.2.0"

miracl_core = "2.3.0"

[dev-dependencies]
criterion = "0.3.4"
bincode = "1.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
opt-level = 3
